--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇺🇸 美国-1.62MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: 2256dea6-b952-43f7-b8a2-983f766d5836, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
+  - {name: 🇨🇳 中国-333.5KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇨🇳 中国-2.71MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20004, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-163.2KB/s(Youtube:不良林), server: trojan1.udpgw.com, port: 443, type: trojan, password: affae2e0-e84b-11ec-b09f-1239d0255272, sni: trojan1.udpgw.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.39MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-660.4KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林), server: v3.ssrsub.com, port: 18443, type: vmess, uuid: f736834f-1fc8-4738-9884-9afe0eb0d818, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.ssrsub.com}}
-  - {name: 🇮🇳 印度-1.55MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林), server: v2.ssrsub.com, port: 18443, type: vmess, uuid: 2256dea6-b952-43f7-b8a2-983f766d5836, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
-  - {name: 🇷🇺 俄罗斯联邦-1.32MB/s(Youtube:不良林), server: v2.ssrsub.com, port: 18443, type: vmess, uuid: f736834f-1fc8-4738-9884-9afe0eb0d818, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
-  - {name: 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-931.0KB/s(Youtube:不良林), server: 103.56.60.235, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.68MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.50MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: 107.148.23.159, port: 26969, type: trojan, password: 1f316deb-02e7-4050-acd9-abcb3942fd37, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.52MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-979.8KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 台湾-1.32MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-163.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-660.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-931.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-979.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.32MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-163.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-660.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-931.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-979.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.32MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-163.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-660.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-931.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-979.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.32MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.32MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-163.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-660.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-931.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-979.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.32MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-163.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-660.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-931.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-979.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.32MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-163.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-660.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-931.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-979.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.32MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-163.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-660.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-931.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-979.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.32MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
