--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-926.6KB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20006, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.77MB/s(Youtube:不良林), server: 104.243.30.252, port: 246, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
-  - {name: 未知国家-479.1KB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: 2256dea6-b952-43f7-b8a2-983f766d5836, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
-  - {name: 🇷🇺 俄罗斯联邦-979.8KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-2.71MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20004, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林), server: 185.167.116.250, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
-  - {name: 🇨🇳 中国-11.24MB/s(Youtube:不良林), server: 120.233.187.199, port: 20014, type: trojan, password: 079db44d-72e6-3ed1-bd9a-f870c19c15cb, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.10MB/s(Youtube:不良林), server: 107.148.23.159, port: 26969, type: trojan, password: 1f316deb-02e7-4050-acd9-abcb3942fd37, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林), server: 185.167.116.250, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
   - {name: 🇫🇷 法国-1.23MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-3.43MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇭🇰 香港-2.25MB/s(Youtube:不良林), server: us01.xniuniu888.xyz, port: 30149, type: vmess, uuid: 1bd166b8-62e5-3ab8-a20e-e045a884807c, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林), server: v2.ssrsub.com, port: 18443, type: vmess, uuid: f736834f-1fc8-4738-9884-9afe0eb0d818, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
+  - {name: 🇨🇳 中国-3.04MB/s(Youtube:不良林), server: 120.233.187.199, port: 20001, type: trojan, password: 079db44d-72e6-3ed1-bd9a-f870c19c15cb, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-546.5KB/s(Youtube:不良林), server: 43.132.153.167, port: 23873, type: vmess, uuid: 143e2134-ca7d-46ff-e902-37d0967b9907, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-412.3KB/s(Youtube:不良林), server: 527hk5.fans8.xyz, port: 443, type: trojan, password: 10b3df8b-2316-4b43-843a-d165ce6603aa, sni: 527hk5.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-926.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
-      - 未知国家-479.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-979.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-546.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-926.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
-      - 未知国家-479.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-979.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-546.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-926.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
-      - 未知国家-479.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-979.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-546.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
+      - 🇭🇰 香港-546.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-926.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
-      - 未知国家-479.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-979.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-546.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-926.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
-      - 未知国家-479.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-979.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-546.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-926.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
-      - 未知国家-479.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-979.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-546.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-926.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
-      - 未知国家-479.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-979.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-546.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
