--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林), server: 185.167.116.250, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
-  - {name: 🇺🇸 美国-1.10MB/s(Youtube:不良林), server: 107.148.23.159, port: 26969, type: trojan, password: 1f316deb-02e7-4050-acd9-abcb3942fd37, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.57MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林), server: 185.167.116.250, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇫🇷 法国-1.23MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林), server: v2.ssrsub.com, port: 18443, type: vmess, uuid: f736834f-1fc8-4738-9884-9afe0eb0d818, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
+  - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: cd75dfa8-e871-11ec-a3cf-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
+  - {name: 🇨🇳 中国-11.24MB/s(Youtube:不良林), server: 120.233.187.199, port: 20014, type: trojan, password: 079db44d-72e6-3ed1-bd9a-f870c19c15cb, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.04MB/s(Youtube:不良林), server: 120.233.187.199, port: 20001, type: trojan, password: 079db44d-72e6-3ed1-bd9a-f870c19c15cb, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-546.5KB/s(Youtube:不良林), server: 43.132.153.167, port: 23873, type: vmess, uuid: 143e2134-ca7d-46ff-e902-37d0967b9907, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-412.3KB/s(Youtube:不良林), server: 527hk5.fans8.xyz, port: 443, type: trojan, password: 10b3df8b-2316-4b43-843a-d165ce6603aa, sni: 527hk5.fans8.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-314.9KB/s(Youtube:不良林), server: trojan1.udpgw.com, port: 443, type: trojan, password: affae2e0-e84b-11ec-b09f-1239d0255272, sni: trojan1.udpgw.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.57MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.27MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-546.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-314.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-546.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-314.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-546.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-314.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-546.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-546.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-314.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-546.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-314.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-546.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-314.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇭🇰 香港-546.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-314.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
